exports[`test something 1`] = `
<div>
  <h2
    className="title" />
  <p
    className="content" />
</div>
`;

exports[`test something 2`] = `
<div>
  <h2
    className="title">
    <Link
      className="link"
      replace={false}
      to="/post/undefined" />
  </h2>
  <p
    className="content" />
</div>
`;
